# ml_finance

./: .gitignore  README.md  pyproject.toml
notebooks/: distrib_props.ipynb  simple_models.ipynb
notebooks/.ipynb_checkpoints/: comparing_sectors-checkpoint.ipynb  distrib_props-checkpoint.ipynb  fetching-checkpoint.ipynb  simple_models-checkpoint.ipynb  testing_data-checkpoint.ipynb
notebooks/analytics/: combine_into_parquet.ipynb  labeling.ipynb
notebooks/old/: comparing_sectors.ipynb  moex.ipynb  tbank.ipynb  testing_data.ipynb
src/finance/: __init__.py
src/finance/finance_data/: __init__.py  moex_loader.py
src/finance/moex/: moex_common.py  shares.py
src/finance/moex/.ipynb_checkpoints/: index-checkpoint.py  index_groups-checkpoint.py  shares-checkpoint.py
src/finance/resample/: __init__.py  aggregations.py  volume.py
